[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Environment/TileSet/LPC_house_interior/interior.png" type="Texture" id=1]
[ext_resource path="res://Scripts/InteriorHouse1.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "interior.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 480, 416 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "interior.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 64, 32, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 10 )

[node name="InteriorHouse1" type="YSort"]
script = ExtResource( 2 )

[node name="FloorAndWall" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 131073, 1, 0, 131075, 2, 0, 131075, 3, 0, 131075, 4, 0, 131075, 5, 0, 131075, 6, 0, 131075, 7, 0, 131075, 8, 0, 131075, 9, 0, 131075, 10, 0, 131075, 11, 0, 131075, 12, 0, 131075, 13, 0, 131075, 14, 0, 131072, 15, 0, 65539, 65536, 0, 65540, 65537, 0, 196608, 65538, 0, 196608, 65539, 0, 196608, 65540, 0, 196608, 65541, 0, 196608, 65542, 0, 262144, 65543, 0, 262144, 65544, 0, 262144, 65545, 0, 262144, 65546, 0, 262144, 65547, 0, 262144, 65548, 0, 262144, 65549, 0, 262144, 65550, 0, 65538, 65551, 0, 65539, 131072, 0, 196614, 131073, 0, 196608, 131074, 0, 196608, 131075, 0, 196608, 131076, 0, 196608, 131077, 0, 196608, 131078, 0, 262144, 131079, 0, 262144, 131080, 0, 262144, 131081, 0, 262144, 131082, 0, 262145, 131083, 0, 262145, 131084, 0, 262145, 131085, 0, 262145, 131086, 0, 65538, 131087, 0, 65539, 196608, 0, 196614, 196609, 0, 196608, 196610, 0, 196608, 196611, 0, 196608, 196612, 0, 196608, 196613, 0, 196608, 196614, 0, 262144, 196615, 0, 262144, 196616, 0, 262144, 196617, 0, 262144, 196618, 0, 262145, 196619, 0, 262145, 196620, 0, 262145, 196621, 0, 262145, 196622, 0, 65538, 196623, 0, 65539, 262144, 0, 65540, 262145, 0, 196608, 262146, 0, 196608, 262147, 0, 196608, 262148, 0, 196608, 262149, 0, 196608, 262150, 0, 262144, 262151, 0, 262144, 262152, 0, 262144, 262153, 0, 262144, 262154, 0, 262145, 262155, 0, 262145, 262156, 0, 262145, 262157, 0, 262145, 262158, 0, 65538, 262159, 0, 65539, 327680, 0, 65540, 327681, 0, 196608, 327682, 0, 196608, 327683, 0, 196608, 327684, 0, 196608, 327685, 0, 196608, 327686, 0, 262144, 327687, 0, 262144, 327688, 0, 262144, 327689, 0, 262144, 327690, 0, 262145, 327691, 0, 262145, 327692, 0, 262145, 327693, 0, 262145, 327694, 0, 65538, 327695, 0, 65539, 393216, 0, 196608, 393217, 0, 196608, 393218, 0, 196608, 393219, 0, 196608, 393220, 0, 196608, 393221, 0, 196608, 393222, 0, 262144, 393223, 0, 262144, 393224, 0, 262144, 393225, 0, 262144, 393226, 0, 262144, 393227, 0, 262144, 393228, 0, 262144, 393229, 0, 262144, 393230, 0, 65538, 393231, 0, 65539, 458752, 0, 196608, 458753, 0, 196608, 458754, 0, 196608, 458755, 0, 196608, 458756, 0, 196608, 458757, 0, 196608, 458758, 0, 262144, 458759, 0, 262144, 458760, 0, 262144, 458761, 0, 262144, 458762, 0, 262144, 458763, 0, 262144, 458764, 0, 262144, 458765, 0, 262144, 458766, 0, 196614, 458767, 0, 65539, 524288, 0, 65537, 524289, 0, 3, 524290, 0, 3, 524291, 0, 3, 524292, 0, 3, 524293, 0, 3, 524294, 0, 196608, 524295, 0, 196608, 524296, 0, 3, 524297, 0, 3, 524298, 0, 3, 524299, 0, 3, 524300, 0, 3, 524301, 0, 3, 524302, 0, 65536, 524303, 0, 65539 )

[node name="Furniture" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 131073, 1, 0, 131075, 2, 0, 131075, 3, 0, 131075, 4, 0, 131075, 5, 0, 131075, 6, 0, 131075, 7, 0, 131075, 8, 0, 131075, 9, 0, 131075, 10, 0, 131075, 11, 0, 131075, 12, 0, 458763, 13, 0, 131075, 14, 0, 131072, 15, 0, 65539, 65536, 0, 65540, 65538, 0, 131085, 65539, 0, 14, 65540, 0, 131085, 65541, 0, 524289, 65542, 0, 524290, 65543, 0, 524289, 65544, 0, 524290, 65548, 0, 524297, 65550, 0, 65538, 65551, 0, 65539, 131072, 0, 65540, 131075, 0, 65550, 131077, 0, 589825, 131078, 0, 589826, 131079, 0, 589825, 131080, 0, 589826, 131086, 0, 65538, 131087, 0, 65539, 196608, 0, 65540, 196611, 0, 131086, 196614, 0, 524289, 196615, 0, 524290, 196616, 0, 524289, 196617, 0, 524290, 196622, 0, 65538, 196623, 0, 65539, 262144, 0, 65540, 262150, 0, 589825, 262151, 0, 589826, 262152, 0, 589825, 262153, 0, 589826, 262155, 0, 786432, 262156, 0, 786433, 262158, 0, 65538, 262159, 0, 65539, 327680, 0, 65540, 327681, 0, 131085, 327684, 0, 131085, 327694, 0, 65538, 327695, 0, 65539, 393216, 0, 65540, 393230, 0, 65538, 393231, 0, 65539, 458752, 0, 65540, 458763, 0, 524292, 458764, 0, 589828, 458766, 0, 65538, 458767, 0, 65539, 524288, 0, 65537, 524289, 0, 3, 524290, 0, 3, 524291, 0, 3, 524292, 0, 3, 524293, 0, 3, 524294, 0, 262144, 524295, 0, 262144, 524296, 0, 3, 524297, 0, 3, 524298, 0, 3, 524299, 0, 3, 524300, 0, 3, 524301, 0, 3, 524302, 0, 65536, 524303, 0, 65539 )

[node name="Kitchen" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 131073, 1, 0, 131075, 2, 0, 131075, 3, 0, 131075, 4, 0, 131075, 5, 0, 131075, 6, 0, 131075, 7, 0, 131075, 8, 0, 131075, 9, 0, 131075, 10, 0, 131075, 11, 0, 131075, 12, 0, 458763, 13, 0, 131075, 14, 0, 131072, 15, 0, 65539, 65536, 0, 65540, 65546, 0, 327683, 65547, 0, 327682, 65548, 0, 327684, 65549, 0, 196610, 65550, 0, 65538, 65551, 0, 65539, 131072, 0, 65540, 131082, 0, 262146, 131083, 0, 262146, 131084, 0, 327686, 131085, 0, 262146, 131086, 0, 65538, 131087, 0, 65539, 196608, 0, 65540, 196619, 0, 720896, 196620, 0, 720897, 196622, 0, 65538, 196623, 0, 65539, 262144, 0, 65540, 262155, 0, 786434, 262158, 0, 65538, 262159, 0, 65539, 327680, 0, 65540, 327694, 0, 65538, 327695, 0, 65539, 393216, 0, 65540, 393230, 0, 65538, 393231, 0, 65539, 458752, 0, 65540, 458766, 0, 65538, 458767, 0, 65539, 524288, 0, 65537, 524289, 0, 3, 524290, 0, 3, 524291, 0, 3, 524296, 0, 3, 524297, 0, 3, 524298, 0, 3, 524299, 0, 3, 524300, 0, 3, 524301, 0, 3, 524302, 0, 65536, 524303, 0, 65539 )

[node name="Living Area" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 65537, 0, 393217, 65538, 0, 65545, 65540, 0, 6, 65545, 0, 12, 131073, 0, 458753, 131078, 0, 9, 131081, 0, 65548, 262153, 0, 9, 327681, 0, 262151, 327684, 0, 8, 327686, 0, 131081, 393229, 0, 524294, 458753, 0, 196615, 458754, 0, 196616, 458756, 0, 196617, 458757, 0, 196618, 458762, 0, 524293, 458765, 0, 589830 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.48, 0.48 )

[node name="spawnPoint" type="Position2D" parent="."]
position = Vector2( 248, 216 )

[node name="doorOut" type="Area2D" parent="."]
position = Vector2( 224, 288 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorOut"]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 128, 160, 128, 192, 160, 192, 160, 160 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 192, 152, 320, 152, 320, 112, 192, 112 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 0, 288, 192, 288, 192, 232, 128, 232, 128, 256, 96, 256, 96, 232, 32, 232, 32, 192, 64, 192, 64, 160, 32, 160, 32, 96, 64, 96, 64, 64, 96, 64, 96, 128, 128, 128, 128, 64, 160, 64, 160, 88, 288, 88, 288, 96, 320, 96, 320, 80, 448, 80, 448, 232, 320, 232, 320, 256, 256, 256, 256, 288, 488, 288, 488, 0, 0, 0 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 360, 128, 352, 136, 352, 144, 360, 152, 408, 152, 416, 144, 416, 136, 408, 128 )

[connection signal="body_entered" from="doorOut" to="." method="_on_doorOut_body_entered"]
